--- a/src/App.css
+++ b/src/App.css
@@ -95,3 +95,19 @@ html {
 .scroll-bar::-webkit-scrollbar-thumb:hover {
   background: #64748b;
 }
+
+/* custom-delete */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.92);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.animate-fadeIn {
+  animation: fadeIn 0.25s ease-out;
+}
