--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,8 @@
-
+@import "tailwindcss";
 
 body, html, #root {
   margin: 0;
-  padding: 0;
-  
-  
- 
+  padding: 0;     
 }
 .input { @apply w-full border border-gray-200 rounded-lg p-3 bg-white; }
 .btn { @apply bg-red-600 text-white px-4 py-2 rounded-lg font-semibold; }
