--- a/src/App.css
+++ b/src/App.css
@@ -111,3 +111,16 @@ html {
 .animate-fadeIn {
   animation: fadeIn 0.25s ease-out;
 }
+
+
+/* Fix Chrome / Edge autofill white background globally */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+select:-webkit-autofill {
+  -webkit-text-fill-color: white !important;
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
+  transition: background-color 5000s ease-in-out 0s;
+  caret-color: red ;
+}
