--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,18 @@ body {
   background-color: inherit;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0; /* Removes the margin in older versions of Chrome */
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 /* Works on Chrome, Edge, and Safari */
 html::-webkit-scrollbar {
   width: 8px;
