--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ html::-webkit-scrollbar-track {
 }
 
 html::-webkit-scrollbar-thumb {
-  background: #475569; /* slate-600 */
+  background: #808c9e; /* slate-600 */
   border-radius: 4px;
 }
 
@@ -135,4 +135,29 @@ select:-webkit-autofill {
   -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
   transition: background-color 5000s ease-in-out 0s;
   caret-color: red ;
+}
+
+/* Custom Notification Scrollbar */
+.custom-notification-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: #ef4444 #ffffff;
+}
+
+.custom-notification-scrollbar::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+.custom-notification-scrollbar::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+.custom-notification-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #ef4444;
+  border-radius: 20px;
+  border: 2px solid #ffffff;
+}
+
+.custom-notification-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #dc2626;
 }
